RESOLVED FIXED128698
REGRESSION: Crashing/Broken Tests Due To Unexpected 8-bit Character Data
https://bugs.webkit.org/show_bug.cgi?id=128698
Summary REGRESSION: Crashing/Broken Tests Due To Unexpected 8-bit Character Data
Brent Fulgham
Reported 2014-02-12 15:02:27 PST
The code change in http://trac.webkit.org/changeset/127801, coupled with the recent change to turn on 8-bit character use everywhere caused the Windows build to break. Windows API only accepts 16-bit Unicode strings for certain operations. The 8-bit strings being passed around inside WebKit need to be converted to 16-bit when calling these APIs.
Attachments
Patch (2.61 KB, patch)
2014-02-12 15:04 PST, Brent Fulgham
thorton: review+
Brent Fulgham
Comment 1 2014-02-12 15:04:55 PST
Tim Horton
Comment 2 2014-02-12 15:10:58 PST
Comment on attachment 224014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224014&action=review > Source/WebCore/platform/graphics/win/UniscribeController.cpp:111 > + String tempToHold16BitCopy; "temp" not so great
Brent Fulgham
Comment 3 2014-02-12 15:38:17 PST
(In reply to comment #2) > (From update of attachment 224014 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=224014&action=review > > > Source/WebCore/platform/graphics/win/UniscribeController.cpp:111 > > + String tempToHold16BitCopy; > > "temp" not so great Changing to bufferFor16BitData.
Brent Fulgham
Comment 4 2014-02-12 17:22:25 PST
Radar WebKit Bug Importer
Comment 5 2014-02-12 17:23:42 PST
Note You need to log in before you can comment on or make changes to this bug.