REGRESSION: Crashing/Broken Tests Due To Unexpected 8-bit Character Data https://bugs.webkit.org/show_bug.cgi?id=128698

Reviewed by Tim Horton.

* platform/graphics/win/UniscribeController.cpp:
(WebCore::UniscribeController::advance): Make 16-bit copy when needed.
(WebCore::UniscribeController::shapeAndPlaceItem): Handle 8-bit case when checking
for word boundaries.


Canonical link: https://commits.webkit.org/146744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164001 268f45cc-cd09-0410-ab3c-d52691b4dbfc